# carms-data-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-docker.txt  workspace.yaml
dagster_home/: dagster.yaml
scripts/: rebuild_chroma.py
services/api/: pyproject.toml  test_qa.py
services/api/app/: config.py  database.py  main.py  models.py
services/api/app/llm/: embeddings.py  qa.py  retriever.py
services/api/app/ui/: app.py
services/api/routes/: health.py  programs.py  qa.py
services/db/: initdb.py
services/piplines/: pyproject.toml
services/piplines/alembic/: env.py
services/piplines/alembic/versions/: 087b8296c9db_vector_dim_384.py  0a179ce08a14_program_vector_added.py  2f31beab6b3c_vector_dim_768.py  374584e4fc44_init_schema.py  39127a5b1e80_vector_dim_1536.py  5dd6abb37ac6_programchangelog_added.py  b1981f9a7ac0_init_schema.py  bd6ec13f229d_programchangelog_added.py  bdf6a127fcdc_vector_dim_384.py
services/piplines/pipeline/: assets.py  definitions.py  explore_program_description.py  normalization.py  parsing_helpers.py
