[project]
name = "carms-data-platform"
version = "0.1.0"
description = "CaRMS Data Platform — API + Dagster pipelines"
authors = [
    {name = "Mariia", email = "masha.shmidt.04@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    # Web / API
    "fastapi (>=0.131.0,<0.132.0)",
    "uvicorn (>=0.41.0,<0.42.0)",

    # Database
    "sqlmodel (>=0.0.37,<0.0.38)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "alembic (>=1.18.4,<2.0.0)",

    # Dagster
    "dagster (>=1.12.15,<2.0.0)",
    "dagster-webserver (>=1.12.15,<2.0.0)",

    # LLM / Embeddings (all via OpenAI — no local models needed)
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "openai (>=2.24.0,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",

    # Utils
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas (<3)",
    "streamlit (>=1.54.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.dagster]
module_name = "services.piplines.pipeline.definitions"
